Fixed alignment

--- a/style.css
+++ b/style.css
@@ -48,6 +48,20 @@ h1{
   margin-left: 300px;
 }
 
+.card4{
+  background-color: beige;
+  padding-right: 30px;
+  padding-left: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: solid;
+  border-style: groove;
+  border-color: wheat;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 250;
+}
+
 .centerText{
   text-align: center;
 }
